<resources>
    <string name="app_name">FOOD APP</string>
    <string name="title_activity_szukaj">Search</string>
    <string name="title_activity_przepisy">Recipes</string>
    <string name="title_activity_przepis">Recipe</string>
    <string name="title_activity_logowanie">Log in</string>
    <string name="title_activity_info">Informations</string>
    <string name="title_activity_rejestracja">Register</string>
    <string name="title_activity_notatki">Notes</string>

    <string name="nazwa">Name</string>
    <string name="skladniki">Ingredients</string>
    <string name="kuchnia">Cuisine</string>
    <string name="dieta">Diet</string>
    <string name="nietolerancje">Intolerances</string>
    <string name="szukaj">Search</string>
    <string name="jezyk">Language</string>
    <string name="instrukcja">Instructions</string>
    <string name="login">Login</string>
    <string name="haslo">Password</string>
    <string name="zaloguj">Log in</string>
    <string name="zarejestruj">Register</string>
    <string name="zalogowano">Logged in</string>
    <string name="blad">Error</string>
    <string name="konto">Account</string>
    <string name="skladnikiDwukropek">Ingredients:</string>
    <string name="instrukcjaDwukropek">Instructions:</string>
    <string name="ulubione">Favorites</string>
    <string name="wyloguj">Log out</string>
    <string name="wylogowano">Logged out</string>niejesteszalogowany
    <string name="brakulubionych">No favorites</string>
    <string name="niejesteszalogowany">You are not logged in</string>
    <string name="gotowew">Ready in:</string>
    <string name="porcje">Servings:</string>
    <string name="kuchnie">Cuisines:</string>
    <string name="typypotrawy">Dish types:</string>
    <string name="okazje">Occasions:</string>
    <string name="winadopary">Paired wines:</string>
    <string name="diety">Diets:</string>
    <string name="wynikzdrowotny">Health score:</string>
    <string name="zarejestrowano">Registered</string>
    <string name="wymaganylogin">Login required</string>
    <string name="wymaganehaslo">Password required</string>
    <string name="haslasieniezgaczaja">Passwords are not matching</string>
    <string name="zapisz">Save</string>
    <string name="pisztutaj">Type here…</string>
    <string name="zapisano">Saved</string>

    <string name="glutenfree">Gluten free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="lactovegetarian">Lacto-vegetarian</string>
    <string name="ovovegetarian">Ovo-vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="lowfodmap">Low FODMAP</string>
    <string name="whole30">Whole30</string>

    <string name="dairy">Dairy</string>
    <string name="egg">Egg</string>
    <string name="gluten">Gluten</string>
    <string name="grain">Grain</string>
    <string name="peanut">Peanut</string>
    <string name="seafood">Seafood</string>
    <string name="sesame">Sesame</string>
    <string name="shellfish">Shellfish</string>
    <string name="soy">Soy</string>
    <string name="sulfite">Sulfite</string>
    <string name="treenut">Tree Nut</string>
    <string name="wheat">Wheat</string>

    <string name="african">African</string>
    <string name="american">American</string>
    <string name="british">British</string>
    <string name="cajun">Cajun</string>
    <string name="caribbean">Caribbean</string>
    <string name="chinese">Chinese</string>
    <string name="easterneuropean">Eastern European</string>
    <string name="european">European</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="greek">Greek</string>
    <string name="indian">Indian</string>
    <string name="irish">Irish</string>
    <string name="italian">Italian</string>
    <string name="japanese">Japanese</string>
    <string name="jewish">Jewish</string>
    <string name="korean">Korean</string>
    <string name="latinamerican">Latin American</string>
    <string name="mediterranean">Mediterranean</string>
    <string name="mexican">Mexican</string>
    <string name="middleeastern">Middle Eastern</string>
    <string name="nordic">Nordic</string>
    <string name="southern">Southern</string>
    <string name="spanish">Spanish</string>
    <string name="thai">Thai</string>
    <string name="vietnamese">Vietnamese</string>

</resources>