<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SzukajActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/bSzukaj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:id="@+id/searchTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvNazwa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:gravity="right"
                    android:text="@string/nazwa" />

                <EditText
                    android:id="@+id/etNazwa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvSkladniki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:gravity="right"
                    android:text="@string/skladniki" />

                <EditText
                    android:id="@+id/etSkladniki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvDieta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_span="2"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/dieta"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/cbGlutenfree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/glutenfree"
                    android:layout_marginHorizontal="16dp"
                    android:layout_span="2"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/cbKetogenic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ketogenic"
                    android:layout_marginHorizontal="16dp"
                    android:layout_span="2"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/cbVegetarian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegetarian"
                    android:layout_marginHorizontal="16dp"
                    android:layout_span="2"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/cbLactovegetarian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lactovegetarian"
                    android:layout_marginHorizontal="16dp"
                    android:layout_span="2"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/cbOvovegetarian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ovovegetarian"
                    android:layout_marginHorizontal="16dp"
                    android:layout_span="2"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/cbVegan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegan"
                    android:layout_marginHorizontal="16dp"
                    android:layout_span="2"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/cbPescetarian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pescetarian"
                    android:layout_marginHorizontal="16dp"
                    android:layout_span="2"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/cbPaleo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paleo"
                    android:layout_marginHorizontal="16dp"
                    android:layout_span="2"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/cbPrimal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/primal"
                    android:layout_marginHorizontal="16dp"
                    android:layout_span="2"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/cbLowfodmap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lowfodmap"
                    android:layout_marginHorizontal="16dp"
                    android:layout_span="2"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/cbWhole30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whole30"
                    android:layout_marginHorizontal="16dp"
                    android:layout_span="2"
                    android:layout_weight="1"/>
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvNietolerancje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_span="2"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/nietolerancje"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <!--            <EditText-->
                <!--                android:id="@+id/etNietolerancje"-->
                <!--                android:layout_width="wrap_content"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:layout_weight="1"-->
                <!--                android:ems="10"-->
                <!--                android:inputType="textPersonName" />-->

            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvKuchnia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_span="2"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/kuchnia"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <!--            <EditText-->
                <!--                android:id="@+id/etKuchnia"-->
                <!--                android:layout_width="wrap_content"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:layout_weight="1"-->
                <!--                android:ems="10"-->
                <!--                android:inputType="textPersonName" />-->
            </TableRow>


        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/bSzukaj"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/szukaj"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>