<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.InfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvReadyInMinutesLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/gotowew" />

            <TextView
                android:id="@+id/tvReadyInMinutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="..." />

            <View
                android:id="@+id/sepReadyInMinutes"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/tvServingsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/porcje" />

            <TextView
                android:id="@+id/tvServings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="..." />

            <View
                android:id="@+id/sepServings"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/tvCuisinesLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/kuchnie" />

            <TextView
                android:id="@+id/tvCuisines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="..." />

            <View
                android:id="@+id/sepCuisines"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/tvDishTypesLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/typypotrawy" />

            <TextView
                android:id="@+id/tvDishTypes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="..." />

            <View
                android:id="@+id/sepDishTypes"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/tvPairedWinesLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/winadopary" />

            <TextView
                android:id="@+id/tvPairedWinesText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="..." />

            <TextView
                android:id="@+id/tvPairedWines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="..." />

            <View
                android:id="@+id/sepPairedWines"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/tvDietsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/diety" />

            <TextView
                android:id="@+id/tvDiets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="..." />

            <View
                android:id="@+id/sepDiets"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/tvHealthScoreLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/wynikzdrowotny" />

            <TextView
                android:id="@+id/tvHealthScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="..." />

            <View
                android:id="@+id/sepHealthScore"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>